--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "grunt": "~0.4.5",
     "matchdep": "~0.3.0",
     "time-grunt": "~0.4.0",
-    "glob": "~4.0.4"
+    "glob": "~4.0.4",
+    "grunt-newer": "~0.7.0",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-rsync": "~0.6.2",
+    "grunt-mkdir": "~0.1.2"
   },
   "dependencies": {}
 }
-
