--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "node": "0.10.21",
     "npm": "1.3.11"
   },
+  "scripts": {
+    "install-dependencies": "bower install && gem install bitters && bourbon install --path app/css"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "matchdep": "~0.3.0",
