--- a/package.json
+++ b/package.json
@@ -16,20 +16,16 @@
     "npm": "1.3.11"
   },
   "scripts": {
-    "install-dependencies": "./scripts/install-dependencies"
+    "build": "brunch build",
+    "serve": "./scripts/serve",
+    "postinstall": "./scripts/postinstall"
   },
   "devDependencies": {
-    "glob": "4.0.4",
-    "grunt": "0.4.5",
-    "grunt-autoprefixer": "1.0.1",
-    "grunt-contrib-connect": "0.8.0",
-    "grunt-contrib-sass": "0.8.1",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-mkdir": "0.1.2",
-    "grunt-newer": "0.7.0",
-    "grunt-rsync": "0.6.2",
-    "matchdep": "0.3.0",
-    "time-grunt": "0.4.0"
+    "brunch": "1.8.5",
+    "javascript-brunch": "1.7.1",
+    "sass-brunch": "1.9.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "normalize.css": "3.0.3"
+  }
 }
