Add brunch working config

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "brunch build",
-    "serve": "./scripts/serve",
+    "serve": "brunch watch",
     "postinstall": "./scripts/postinstall"
   },
   "devDependencies": {
