--- a/package.json
+++ b/package.json
@@ -18,16 +18,33 @@
   "scripts": {
     "build": "brunch build",
     "serve": "brunch watch",
+    "lint:js": "eslint ./scripts/*.js",
     "gh-pages": "./scripts/gh-pages",
     "postinstall": "./scripts/postinstall",
-    "test": "casperjs tests/testsuite.js"
+    "test": "casperjs tests/testsuite.js",
+    "algolia": "babel-node ./scripts/algolia.js"
   },
   "devDependencies": {
-    "brunch": "1.8.5",
-    "gh-pages": "0.8.0",
-    "javascript-brunch": "1.7.1",
-    "phantomcss": "0.11.0",
-    "sass-brunch": "1.9.0"
+    "algoliasearch": "3.10.2",
+    "babel": "^5.8.29",
+    "babel-brunch": "6.0.0",
+    "babel-core": "^5.8.29",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "6.3.13",
+    "brunch": "^1.8.5",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.1",
+    "eslint-config-algolia": "^4.5.0",
+    "eslint-plugin-algolia": "^1.5.0",
+    "eslint-plugin-react": "^3.11.3",
+    "gh-pages": "^0.8.0",
+    "javascript-brunch": "^1.7.1",
+    "lodash": "3.10.1",
+    "phantomcss": "^0.11.0",
+    "sass-brunch": "^1.9.0",
+    "to-factory": "1.0.0",
+    "x-ray": "^2.0.2",
+    "xray": "0.5.0"
   },
   "dependencies": {
     "normalize.css": "3.0.3"
