--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "devDependencies": {
     "algoliasearch": "3.10.2",
+    "auto-reload-brunch": "2.0.0",
     "babel": "^5.8.29",
     "babel-brunch": "6.0.0",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "6.3.13",
-    "brunch": "^1.8.5",
+    "brunch": "2.4.2",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "eslint-config-algolia": "^4.5.0",
