--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "6.3.13",
     "brunch": "2.4.2",
+    "cssnano": "3.7.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "eslint-config-algolia": "^4.5.0",
@@ -44,6 +45,7 @@
     "lodash": "3.10.1",
     "phantomcss": "^0.11.0",
     "postcss-brunch": "0.5.0",
+    "postcss-round-subpixels": "1.2.0",
     "sass-brunch": "^1.9.0",
     "to-factory": "1.0.0",
     "x-ray": "^2.0.2",
