--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "scripts": {
     "build": "brunch build",
     "serve": "./scripts/serve",
+    "fonts": "npm run fonts:svg && npm run fonts:ttf && npm run fonts:woff",
+    "fonts:svg": "babel-node ./scripts/fonts_svg.js",
+    "fonts:ttf": "./scripts/fonts_ttf",
+    "fonts:woff": "./scripts/fonts_woff",
     "lint:js": "eslint ./scripts/*.js",
     "deploy": "./scripts/deploy",
     "postinstall": "./scripts/postinstall",
@@ -25,31 +29,36 @@
     "algolia": "babel-node ./scripts/algolia.js"
   },
   "devDependencies": {
-    "algoliasearch": "3.14.6",
-    "auto-reload-brunch": "2.0.0",
-    "autoprefixer": "6.3.6",
+    "algoliasearch": "^3.14.6",
+    "auto-reload-brunch": "^2.0.0",
+    "autoprefixer": "^6.3.6",
     "babel": "^5.8.29",
-    "babel-brunch": "6.0.0",
+    "babel-brunch": "^6.0.0",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.6",
-    "babel-preset-es2015": "6.3.13",
-    "brunch": "2.4.2",
-    "cssnano": "3.7.1",
+    "babel-preset-es2015": "^6.3.13",
+    "bluebird": "^3.4.1",
+    "brunch": "^2.4.2",
+    "cssnano": "^3.7.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "eslint-config-algolia": "^4.5.0",
     "eslint-plugin-algolia": "^1.5.0",
     "eslint-plugin-react": "^3.11.3",
     "gh-pages": "^0.8.0",
+    "glob": "^7.0.5",
     "javascript-brunch": "^1.7.1",
-    "lodash": "3.10.1",
+    "lodash": "^4.13.1",
     "phantomcss": "^0.11.0",
-    "postcss-brunch": "0.5.0",
-    "postcss-round-subpixels": "1.2.0",
+    "postcss-brunch": "^0.5.0",
+    "postcss-round-subpixels": "^1.2.0",
     "sass-brunch": "^1.9.0",
-    "to-factory": "1.0.0",
+    "svg2ttf": "4.0.1",
+    "svgicons2svgfont": "^5.0.0",
+    "to-factory": "^1.0.0",
+    "ttf2woff": "2.0.1",
     "x-ray": "^2.0.2",
-    "xray": "0.5.0"
+    "xray": "^0.5.0"
   },
   "dependencies": {
     "normalize.css": "3.0.3"
