--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "npm": "1.3.11"
   },
   "scripts": {
-    "build": "brunch build",
+    "build": "./scripts/build",
     "serve": "./scripts/serve",
     "fonts": "npm run fonts:svg && npm run fonts:ttf && npm run fonts:woff",
     "fonts:svg": "babel-node ./scripts/fonts_svg.js",
@@ -30,15 +30,15 @@
   },
   "devDependencies": {
     "algoliasearch": "^3.14.6",
-    "auto-reload-brunch": "^2.0.0",
+    "auto-reload-brunch": "2.0.0",
     "autoprefixer": "^6.3.6",
     "babel": "^5.8.29",
-    "babel-brunch": "^6.0.0",
+    "babel-brunch": "6.0.2",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "bluebird": "^3.4.1",
-    "brunch": "^2.4.2",
+    "brunch": "2.4.2",
     "cssnano": "^3.7.1",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
@@ -47,7 +47,6 @@
     "eslint-plugin-react": "^3.11.3",
     "gh-pages": "^0.8.0",
     "glob": "^7.0.5",
-    "javascript-brunch": "^1.7.1",
     "lodash": "^4.13.1",
     "phantomcss": "^0.11.0",
     "postcss-brunch": "^0.5.0",
